Fixing hero section vertical alignment

--- a/app/public/src/sass/core/_layout.scss
+++ b/app/public/src/sass/core/_layout.scss
@@ -216,32 +216,30 @@ img {
         position: absolute;
 
         &.were-slik-1 {
-          top: 2%;
           left: 7%;
+          top: 17%;
+          transform: translateY(-50%);
 
           @media screen and (min-width: 40em) {
-            top: 7%;
             left: 16%;
           }
 
           @media screen and (min-width: 60em) {
-            top: 1%;
             left: 7%;
           }
         }
 
         &.were-slik-2 {
-          top: 47%;
           left: 50%;
+          top: 70%;
+          transform: translateY(-50%);
 
           @media screen and (min-width: 40em) {
-            top: 54%;
             left: 59%;
           }
         }
 
         @media screen and (min-width: 60em) {
-            top: 66%;
             font-size: 140px;
         }
     }
@@ -249,34 +247,29 @@ img {
     #line1 {
       @media screen and (min-width: 40em) {
         left: 7%;
-        top: 20%;
-        height: 64%;
+        top: 28%;
+        height: 54%;
       }
     }
 
     .slik-logo-main {
-      top: 42%;
-      left: 47%;
-      margin-top: 12%;
-      margin-left: -5%;
-      width: 80%;
+      width: 276px;
+      position: relative;
+      top: 50%;
+      transform: translateY(-50%);
 
 
 
       @media screen and (min-width: 40em) {
-        top: 30%;
         left: 47%;
-        width: 60%;
-        margin-top: -30%;
+        width: 500px;
         margin-left: -30%;
         position: absolute;
       }
 
       @media screen and (min-width: 60em) {
-        top: 35%;
         left: 50%;
-        width: 50%;
-        margin-top: -25%;
+        width: 500px;
         margin-left: -25%;
       }
     }
@@ -299,13 +292,13 @@ img {
 
     .intro {
         position: absolute;
-        top: 73px;
+        top: 0;
         left: 0;
         right: 0;
         bottom: 0;
         margin: auto;
         vertical-align: middle;
-        height: 100%;
+        height: 90vh;
         padding: 15px;
 
         @media screen and (min-width: 60em) {
@@ -324,18 +317,18 @@ img {
           margin-left: auto;
           margin-right: auto;
           position: absolute;
-          bottom: 65px;
+          top: 90%;
+          transform: translateY(-50%);
           padding-bottom: 30px;
 
           @media screen and (min-width: 40em) {
               position: relative;
-              top: 70%;
               max-width: 600px;
-              padding-bottom: 0;
           }
           @media screen and (min-width: 60em) {
               max-width: 860px;
               top: 95%;
+              padding-bottom: 0;
           }
         }
 
@@ -733,8 +726,11 @@ img {
     }
 
     .contact {
+        margin-bottom: 45px;
+
         @media screen and (min-width: 40em) {
             width: 33%;
+            margin-bottom: 0px;
         }
 
         &:nth-child(3) {
@@ -751,7 +747,7 @@ img {
         h5 {
             font-size: 16px;
             margin-top: 0;
-            margin-bottom: 30px;
+            margin-bottom: 15px;
             color: $SLIK_ORANGE !important;
         }
 
